<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="reserve_a_table">Reserve a Table</string>
    <string name="extras">Extras</string>
    <string name="starter">Starter</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Dessert</string>
    <string name="drinks">Drinks</string>
    <string name="textview">Patliputra Palate</string>
    <string name="out_for_delivery">Out for Delivery!</string>
    <string name="foodContent">Sushi is a Japanese dish that has taken the world by storm. In recent years, sushi has gained popularity in India, but it is still considered a niche cuisine. However, with Indian twists, sushi has the potential to reach new heights of popularity. From vegetarian sushi rolls to paneer sushi, Indian chefs are experimenting with sushi to suit the Indian palate.</string>
    <string name="foodContent2">Momo, a Tibetan dish, has been a popular street food in India for decades. However, the Indian food scene is now shifting its focus to Bao and Thapnese buns, which are taking over the food scene. These steamed buns filled with meat or vegetables are soft, fluffy, and flavorful. They are perfect as a snack or a meal and can be found in high-end restaurants as well as street food stalls.</string>
    <string name="foodContent3">Korean cuisine has been gaining popularity in India over the past few years. Korean noodles, also known as Ramyeon, have become a new favorite among food enthusiasts. These noodles are spicy, flavorful, and perfect for a quick meal. They are now available in many Korean restaurants across India.</string>
    <string name="foodContent4">Pizza has been a popular food in India for many years, and there are many pizza chains across the country. However, people are now turning to authentic Italian pizza made in a firewood oven. Napoleon pizza is a thin-crust pizza topped with fresh ingredients and cooked in a wood-fired oven. It is a delicious and healthier alternative to big food chain pizzas.</string>
    <string name="foodContent5">Boba tea, also known as bubble tea, is a Taiwanese tea-based drink that has become popular worldwide. The drink is made with tea, milk, sugar, and tapioca pearls. Popping Boba tea is a new twist to traditional boba tea, where the pearls are filled with fruit juice that pops into your mouth. This unique and refreshing drink is set to become a trend.</string>
    <string name="price1">Rs. 99</string>
    <string name="price2">Rs. 99</string>
    <string name="price3">Rs. 99</string>
    <string name="price4">Rs. 99</string>
    <string name="patna">Patna</string>
    <string name="content">Patliputra Palate invites you to savor Bihar\'s rich heritage with a fusion of ancient and modern flavors. Our restaurant offers a cultural journey through food, perfect for all occasions.</string>
    <string name="go_to_home">Go to Home</string>
    <string name="reservation_complete">Reservation Complete!</string>
    <string name="your_reservation_id">Your Reservation ID</string>
    <string name="contact"><b>For more information:</b>\npatliputra.palate@gmail.com\n+91 XXXXXXXXXX</string>
    <string name="thank_you_text">We will notify you in a day advance.</string>
    <string name="thank_you_text_2">Hope to see you soon!</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="information">Information</string>
    <string name="back">Back</string>
    <string name="date">Date</string>
    <string name="no_of_diners">No. of Diners</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email*</string>
    <string name="time">Time</string>
    <string name="number_of_diners">Number of Diners*</string>
    <string name="contact_information">Contact Information</string>
    <string name="first_name_">First Name*</string>
    <string name="last_name_">Last Name*</string>
    <string name="phone_no">Phone No.*</string>
    <string name="is_required">* is required</string>
    <string name="date_">Date*</string>
    <string name="time_">Time*</string>
    <string name="email_address">Email Address</string>
    <string name="main_img">main_img</string>
    <string name="menub_img">menuB_img</string>
    <string name="shushi_img">sushi_img</string>
    <string name="momo_img">momo_img</string>
    <string name="noodles_img">noodles_img</string>
    <string name="napolean_pizza_img">napoleon_pizza_img</string>
    <string name="homeb_img">homeB_img</string>
    <string name="shopb_img">shopB_img</string>
</resources>